# V.E.C.T.O.R

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  README_SELF_CONTAINED.md  install.sh  pom.xml  run-app.bat  run-app.sh  run-self-contained.sh  run-tiling.sh  run.sh  start-app.sh
c/: test_server.c  vector.c  vector_c
python/: app.py
rust/: Cargo.toml  README.md
rust/src/: main.rs
src/main/java/com/nexuslabs/vector/: VectorApplication.java
src/main/java/com/nexuslabs/vector/api/: AskController.java  AskRequest.java  AskResponse.java  SystemController.java  WebController.java
src/main/java/com/nexuslabs/vector/config/: AppConfig.java  AutoInstaller.java  AutoOpenBrowser.java  CorsConfig.java
src/main/java/com/nexuslabs/vector/context/: ContextOptimizer.java
src/main/java/com/nexuslabs/vector/desktop/: VectorApp.java
src/main/java/com/nexuslabs/vector/inference/: LlamaCppClient.java  OllamaClient.java
src/main/java/com/nexuslabs/vector/intelligence/: QueryComplexity.java  QuestionClassifier.java
src/main/java/com/nexuslabs/vector/knowledge/: WikipediaService.java
src/main/java/com/nexuslabs/vector/memory/: AnswerCache.java  WikiCache.java
src/main/java/com/nexuslabs/vector/model/: ModelManager.java  ModelRouter.java
src/main/java/com/nexuslabs/vector/processing/: InputSanitizer.java  RateLimiter.java
src/main/java/com/nexuslabs/vector/prompt/: PromptBuilder.java
src/main/java/com/nexuslabs/vector/response/: ResponseProcessor.java
src/main/resources/: application.properties
src/main/resources/templates/: index.html
