[package]
name = "vector_rust"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
cached = "0.44"
regex = "1.10"
rand = "0.8"
chrono = "0.4"
